2 File Leak defect groups in 2 files

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 21
    • Affects Version/s: 21
    • Component/s: hotspot
    • None
    • b05
    • other

      Fixing 2 file leak warnings:
      1) DirectivesParser::parse_from_file_inner() in open/src/hotspot/share/compiler/directivesParser.cpp
      2) mmap_attach_shared() in open/src/hotspot/os/posix/perfMemory_posix.cpp

            Assignee:
            Calvin Cheung (Inactive)
            Reporter:
            Shadow Bug
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: