8298321: 2 File Leak defect groups in 2 files